# firmware

./: .clang-format  .gitignore  CMakeLists.txt  Justfile
.zed/: settings.json
boards/: orpheus_pico.h
src/: CMakeLists.txt  main.c
src/drivers/baro/: baro.c  baro.h
src/drivers/i2c/: i2c.c  i2c.h
src/drivers/imu/: imu.c  imu.h
src/drivers/led/: led.c  led.h
src/drivers/lora/: defines.h  lora.c  lora.h
src/drivers/lt_logger/: lt_config.h  lt_logger.c  lt_logger.h
src/flight/: autopilot.c  autopilot.h  dshot.c  dshot.h  mixer.c  mixer.h  pid.c  pid.h  planner.c  planner.h
tools/: uf2conv.py
